# A-Star-path-plan-in-octomap

./: README.md
local_path_plan/: CMakeLists.txt
local_path_plan/data/: my_octree.bt  my_octree_simple.bt
local_path_plan/include/: AStar.h  MyPoint.h
local_path_plan/script/: astar_py.py  build_map.py  my_map222.txt  my_path.txt
local_path_plan/src/: Astar.cpp  MyPoint.cpp  main.cpp
